traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:6: error: ':' expected but ',' found.
  def trianglemoiti?1(x,y){
                       ^TraversalDiagonal:20: error: identifier expected but '}' found.
} 
^